# mango-v3

./: .gitignore  Anchor.toml  Anchor.toml   Cargo.toml  README.md  changelog.md  coderrect.json  cu_per_instruction.sh  cu_per_ix.sh  proposals.md  rustfmt.toml
.cargo/: audit.toml
.github/: ci-soteria.yml
.github/workflows/: ci-cargo-audit.yml  ci-lint-test.yml  ci-soteria.yml  ci-uxd.yml  program.yml
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
liquidator/: Cargo.toml
liquidator/tests/: test_liquidate.rs  test_spot_base_liab.rs
liquidator/tests/program_test/: mod.rs
mango-logs/: Cargo.toml
mango-logs/src/: lib.rs
mango-macro/: Cargo.toml
mango-macro/src/: lib.rs
mango-test/: Cargo.toml
mango-test/src/: assertions.rs  cookies.rs  lib.rs
program/: Cargo.toml  README.md  changelog.md  devnet_deploy.sh  rustfmt.toml  testnet_deploy.sh
program/src/: book.rs  critbit.rs  entrypoint.rs  error.rs  ids.rs  instruction.rs  lib.rs  mango_program.rs  matching.rs  oracle.rs  processor.rs  queue.rs  state.rs  utils.rs
program/tests/: test_alternative_authority.rs  test_borrow.rs  test_borrow_withdraw.rs  test_compute.rs  test_consume_events.rs  test_create_account.rs  test_delegate.rs  test_deposit.rs  test_flash_loan.rs  test_funding_rate.rs  test_init.rs  test_instructions.rs  test_interest_rate.rs  test_liquidation.rs  test_liquidation_delisting_token.rs  test_liquidation_perp_market.rs  test_liquidation_perp_market_max_cu.rs  test_liquidation_token_and_perp.rs  test_liquidation_token_and_perp_max_cu.rs  test_liquidation_token_and_token.rs  test_liquidation_token_and_token_max_cu.rs  test_misc.rs  test_options.rs  test_oracle.rs  test_perp_markets.rs  test_perp_trigger_orders.rs  test_place_perp_order.rs  test_place_spot_order.rs  test_ralfs.rs  test_sanity.rs  test_spot_market_mode_closeonly.rs  test_spot_markets.rs  test_update_banks.rs  test_worst_case.rs
program/tests/helpers/: mod.rs
program/tests/program_test/: assertions.rs  cookies.rs  group.rs  mod.rs  scenarios.rs
program/tests/program_test/helpers/: flash_loan_receiver.rs  mod.rs
