[workspace]
members = [
    "common",
    "mango-macro",
    "program"
]

[profile.release]
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

#[profile.test]
#lto = true
#codegen-units = 1
#
#[profile.test.build-override]
#opt-level = 3
#incremental = false
#codegen-units = 1

# Official Build Tools
# solana-cli 1.7.10 (src:03b93051; feat:660526986)
# rustc 1.56.0-nightly (0035d9dce 2021-08-16)