[workspace]
members = [
    "common",
    "mango-macro",
    "program",
    "mango-logs"
]

[profile.release]
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

#[profile.test]
#lto = true
#codegen-units = 1
#
#[profile.test.build-override]
#opt-level = 3
#incremental = false
#codegen-units = 1
