[package]
name = "mango-test"
version = "3.0.0"
edition = "2018"

[dependencies]
anchor-lang = "0.20.1"
bincode = "^1.3.1"
fixed = { version = "=1.9.0", features = ["serde"] }
fixed-macro = "^1.1.1"
serde = "^1.0.118"
serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
solana-program = "^1.8.1"
solana-sdk = "^1.8.1"
solana-program-test = "^1.8.1"
solana-logger = "^1.8.1"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }

mango = { path = "../program" }
mango-common = { path = "../common" }
