[package]
name = "mango"
version = "3.0.4"
authors = ["blockworks"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []
devnet = []

[dependencies]
solana-program = "^1.7.1"
arrayref = "^0.3.6"
serde = "^1.0.118"
bs58 = "0.4.0"
bytemuck = "^1.4.1"
bincode = "^1.3.1"
fixed = { version = "^1.9.0", features = ["serde"] }
fixed-macro = "^1.1.1"
enumflags2 = "^0.6.4"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
serum_dex = { version = "0.3.1", git = "https://github.com/blockworks-foundation/serum-dex.git", features = ["no-entrypoint", "program"] }
static_assertions = "^1.1.0"
flux-aggregator = { version = "^0.1", git = "https://github.com/blockworks-foundation/solana-flux-aggregator.git", features = ["program", "no-entrypoint"] }
safe-transmute = "^0.11.1"
mango-macro = { path = "../mango-macro" }
mango-common = { path = "../common" }

[dev-dependencies]
solana-sdk = "^1.7.1"
solana-program-test = "^1.7.1"
solana-logger = "^1.7.4"
tarpc = { version = "^0.26.2", features = ["full"] }


[profile.release]
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

#[profile.test]
#lto = true
#codegen-units = 1
#
#[profile.test.build-override]
#opt-level = 3
#incremental = false
#codegen-units = 1

[lib]
name = "mango"
crate-type = ["cdylib", "lib"]

# Official Build Tools
# solana-cli 1.7.9 (src:0707290b; feat:2045430982)
# rustc 1.56.0-nightly (e3b1c12be 2021-08-02)