[package]
name = "mango"
version = "3.3.2"
authors = ["blockworks"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []
devnet = []
client = ["no-entrypoint"]

[dependencies]
solana-program = "^1.8.1"
arrayref = "^0.3.6"
serde = "^1.0.118"
bs58 = "0.4.0"
bytemuck = "^1.7.2"
bincode = "^1.3.1"
fixed = { version = "=1.9.0", features = ["serde"] }
fixed-macro = "^1.1.1"
enumflags2 = "^0.6.4"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
static_assertions = "^1.1.0"
safe-transmute = "^0.11.1"
mango-macro = { path = "../mango-macro" }
mango-common = { path = "../common" }
mango-logs = { path = "../mango-logs", features=["no-entrypoint"] }
switchboard-program = "^0.1.52"
anchor-lang = "0.20.1"

[dev-dependencies]
solana-sdk = "^1.8.1"
solana-program-test = "^1.8.1"
solana-logger = "^1.8.1"
tarpc = { version = "^0.26.2", features = ["full"] }


[lib]
name = "mango"
crate-type = ["cdylib", "lib"]
