[package]
name = "mango"
version = "3.4.3"
authors = ["blockworks"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []
devnet = []
client = ["no-entrypoint"]

[dependencies]
solana-program = ">=1.9.0"
arrayref = "^0.3.6"
serde = "^1.0.118"
bs58 = "0.4.0"
bytemuck = "^1.7.2"
bincode = "^1.3.1"
# higher versions of fixed don't work until rustc used by solana bpf is upgraded
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
enumflags2 = "^0.6.4"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
serum_dex = { rev = "7f55a5ef5f7937b74381a3124021a261cd7d7283", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
static_assertions = "^1.1.0"
safe-transmute = "^0.11.1"
mango-macro = { path = "../mango-macro" }
mango-common = { path = "../common" }
mango-logs = { path = "../mango-logs", features=["no-entrypoint"] }
pyth-client = {version = ">=0.5.0", features = ["no-entrypoint"]}

switchboard-program = ">=0.2.0"
switchboard-utils = ">=0.1.36"

anchor-lang = ">=0.24.2"

[dev-dependencies]
solana-sdk = ">=1.9.0"
solana-program-test = ">=1.9.0"
solana-logger = ">=1.9.0"
tarpc = { version = "^0.26.2", features = ["full"] }
rand = "0.8.4"

[lib]
name = "mango"
crate-type = ["cdylib", "lib"]
